--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi Carrito APP - Proyecto Coder VUE</title>
+    <title>T-Compro</title>
   </head>
   <body>
     <div id="app"></div>
